<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    
    android:fillViewport="true"
    android:background="@layout/header_gradient"   
    tools:context="com.activity.MainActivity" >
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView android:paddingTop="40dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/str_desc"
            android:src="@drawable/logo" />
   		<LinearLayout android:layout_width="fill_parent"
   		    android:layout_height="fill_parent"
   		    android:orientation="vertical"
   		    android:paddingBottom="5dip"
   		    android:paddingTop="40dip" >
		    <com.romainpiel.shimmer.ShimmerButton 
		        android:id="@+id/newgameBtn"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dip"
		        android:textSize="25sp"	        
		        android:text="@string/str_newgame" />
		    <com.romainpiel.shimmer.ShimmerButton 
		        android:id="@+id/creditBtn"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dip"
		        android:textSize="25sp"	        
		        android:text="@string/str_credit" />
		    <com.romainpiel.shimmer.ShimmerButton 
		        android:id="@+id/quitBtn"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dip"
		        android:textSize="25sp"	        
		        android:text="@string/str_quit" />

		    <com.romainpiel.shimmer.ShimmerTextView
		        android:layout_marginTop="20dip"
		        android:layout_gravity="right"
		        android:id="@+id/nameTxt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="25sp"
		        android:textColor="#104E8B"		        
		        android:text="@string/str_name" />
		    <com.romainpiel.shimmer.ShimmerTextView
		        android:layout_gravity="right"
		        android:id="@+id/uidTxt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="25sp"
		        android:textColor="#104E8B"
		        android:text="@string/str_id" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>