<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@layout/header_gradient"
    android:orientation="vertical"
    tools:context="com.activity.CreditActivity" >
    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#104E8B"
        android:textSize="30sp"
        android:layout_marginBottom="100dip"
        android:text="@string/str_version" />
    <com.romainpiel.shimmer.ShimmerTextView 
        android:id="@+id/author"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#104E8B"        
        android:textSize="30sp"        
        android:layout_marginBottom="100dip"
        android:text="@string/str_author" />
    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_contact"
        android:textColor="#104E8B"        
        android:textSize="30sp" />
</LinearLayout>