<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@layout/header_gradient"
    tools:context="com.activity.GameActivity" >
	<LinearLayout android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal">
   	    <TextView android:id="@+id/winTxt"
   	        android:layout_width="fill_parent"
   	        android:layout_weight="1"
   	        android:layout_height="wrap_content"
   	        android:background="#00000000"
   	        android:textColor="#104E8B"
   	        android:text="@string/str_win"
   	        android:textSize="25sp"/>
   	    <TextView android:id="@+id/loseTxt"
   	        android:layout_width="fill_parent"
   	        android:layout_weight="1"
   	        android:layout_height="wrap_content"
   	        android:textColor="#104E8B"
   	        android:text="@string/str_lose"
   	        android:textSize="25sp"
   	        android:background="#00000000"/>
   	    <TextView android:id="@+id/totalTxt"
   	        android:layout_width="fill_parent"
   	        android:layout_weight="1"
   	        android:layout_height="wrap_content"
   	        android:textColor="#104E8B"
   	        android:text="@string/str_total"
   	        android:textSize="25sp"
   	        android:background="#00000000"/>
   	</LinearLayout>    
	<GridView android:id="@+id/cardsGrid"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:numColumns="2"
	    android:verticalSpacing="10dp"
	    android:horizontalSpacing="10dp"
	    android:columnWidth="90dp"
	    android:stretchMode="columnWidth"
	    android:gravity="center"/>
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <ImageButton android:id="@+id/addBtn"
    	    android:src="@drawable/t_math_plus"
        	android:layout_width="fill_parent"
        	android:layout_weight="1"
       		android:layout_height="70dip"
            android:background="@layout/button"
        	android:contentDescription="@string/str_desc"/>		    
   	    <ImageButton android:id="@+id/minusBtn"
    	    android:src="@drawable/t_math_minus"
        	android:layout_width="fill_parent"
        	android:layout_weight="1"
       		android:layout_height="70dip"
            android:background="@layout/button"
        	android:contentDescription="@string/str_desc"/>	
	    <ImageButton android:id="@+id/mtplBtn"
    	    android:src="@drawable/t_math_multiply"
        	android:layout_width="fill_parent"
        	android:layout_weight="1"
       		android:layout_height="70dip"
            android:background="@layout/button"
        	android:contentDescription="@string/str_desc"/>	
	    <ImageButton android:id="@+id/divideBtn"
    	    android:src="@drawable/t_math_divide"
        	android:layout_width="fill_parent"
        	android:layout_weight="1"
       		android:layout_height="70dip"
            android:background="@layout/button"
        	android:contentDescription="@string/str_desc"/>	
	    <ImageButton android:id="@+id/opbrktBtn"
    	    android:src="@drawable/t_math_opbrkt"
        	android:layout_width="fill_parent"
        	android:layout_weight="1"
       		android:layout_height="70dip"
            android:background="@layout/button"
        	android:contentDescription="@string/str_desc"/>	
	    <ImageButton android:id="@+id/clsbrktBtn"
    	    android:src="@drawable/t_math_clbrkt"
        	android:layout_width="fill_parent"
        	android:layout_weight="1"
       		android:layout_height="70dip"
            android:background="@layout/button"       		
        	android:contentDescription="@string/str_desc"/>		    
   	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal">
   	    <TextView android:id="@+id/opbrkLeftTxt"
   	        android:layout_width="fill_parent"
   	        android:layout_weight="1"
   	        android:layout_height="wrap_content"
   	        android:background="#00000000"
   	        android:gravity="left"
   	        android:textColor="#4169E1"
   	        android:textSize="20sp"/>
   	    <TextView android:id="@+id/clsbrkLeftTxt"
   	        android:layout_width="fill_parent"
   	        android:layout_weight="1"
   	        android:layout_height="wrap_content"
   	        android:gravity="right"
   	        android:textColor="#4169E1"
   	        android:textSize="20sp"
   	        android:background="#00000000"/>
   	</LinearLayout>   	
	<LinearLayout android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <Button android:id="@+id/backspaceBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_weight="0.65"
            android:layout_height="50dip"
            android:layout_gravity="left|center_vertical"
            android:background="@layout/button"
            android:text="@string/str_backspace"
            android:textSize="25sp"
            android:contentDescription="@string/str_desc"/>
        <Button android:id="@+id/clearBtn"
			style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_marginLeft="2dip"
            android:layout_weight="0.85"
            android:layout_height="50dip"
            android:layout_gravity="right|center_vertical"
            android:background="@layout/button"
            android:text="@string/str_clear"
            android:textSize="25sp"
            android:contentDescription="@string/str_desc"/>
        <Button android:id="@+id/restartBtn"
			style="?android:attr/buttonBarButtonStyle"            
            android:layout_width="fill_parent"
            android:layout_marginLeft="2dip"
            android:layout_weight="0.8"
            android:layout_height="50dip"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="3.0dip"
            android:background="@layout/button"
            android:text="@string/str_restart"
            android:textSize="25sp"
            android:contentDescription="@string/str_desc"/>	        
    </LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal"
   	    android:paddingTop="10dip">
   	    <TextView android:id="@+id/arthTxt"
   	        android:layout_width="220dip"
   	        android:layout_height="40dip"
   	        android:background="#ffffff"
   	        android:gravity="center_vertical"
   	        android:textSize="25sp"/>
   	    <ImageButton android:id="@+id/calcBtn"
   	        android:layout_width="40dip"
   	        android:layout_height="40dip"
   	        android:scaleType="centerInside"
   	        android:src="@drawable/r_equal"
            android:background="@layout/button"
   	        android:paddingLeft="10dip"
   	        android:paddingRight="10dip"
   	        android:contentDescription="@string/str_desc"/>
   	    <TextView android:id="@+id/resultTxt"
   	        android:layout_width="70dip"
   	        android:layout_height="40dip"
   	        android:textSize="25sp"
   	        android:gravity="center"
   	        android:background="#ffffff"/>
   	</LinearLayout>

   	<Button
   	    android:id="@+id/testBtn"
   	    android:layout_marginTop="10dip"
   	    android:layout_width="80dip"
   	    android:layout_height="40dip"
   	    android:textSize="15sp"
   	    android:textAlignment="center"
   	    android:layout_gravity="center_horizontal"
		android:background="@layout/button"
   	    android:text="@string/str_test" />

</LinearLayout>
